[gd_scene load_steps=3 format=2]

[ext_resource path="res://other/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://addons/colour_picker/CustomColourPicker.gd" type="Script" id=2]

[node name="CustomColourPicker" type="PanelContainer"]
margin_right = 154.0
margin_bottom = 212.0
rect_min_size = Vector2( 150, 0 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 154.0
margin_bottom = 212.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 154.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 14.0
margin_right = 16.0
margin_bottom = 26.0
text = "R: "

[node name="RedSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 20.0
margin_right = 154.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 256.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 154.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_top = 14.0
margin_right = 17.0
margin_bottom = 26.0
text = "G: "

[node name="GreenSlider" type="HSlider" parent="VBoxContainer/HBoxContainer3"]
margin_left = 21.0
margin_right = 154.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 256.0

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 154.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_top = 14.0
margin_right = 16.0
margin_bottom = 26.0
text = "B: "

[node name="BlueSlider" type="HSlider" parent="VBoxContainer/HBoxContainer4"]
margin_left = 20.0
margin_right = 154.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 5
max_value = 256.0
ticks_on_borders = true

[node name="AlphaBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 154.0
margin_bottom = 172.0

[node name="Label" type="Label" parent="VBoxContainer/AlphaBox"]
margin_top = 14.0
margin_right = 16.0
margin_bottom = 26.0
text = "A: "

[node name="AlphaSlider" type="HSlider" parent="VBoxContainer/AlphaBox"]
margin_left = 20.0
margin_right = 154.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 256.0
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 154.0
margin_bottom = 196.0
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 154.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="HexLabel" type="LineEdit" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
visible = false
margin_right = 50.0
margin_bottom = 20.0
rect_clip_content = true
size_flags_horizontal = 3
text = "ffffffff"
editable = false
context_menu_enabled = false

[node name="PasteButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2" groups=[
"audio_button",
]]
margin_right = 98.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Reset to Default"

[node name="Random" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 102.0
margin_right = 154.0
margin_bottom = 20.0
text = "Random"
[connection signal="button_up" from="VBoxContainer/HBoxContainer/HBoxContainer2/Random" to="." method="_on_Random_button_up"]
